[package]
name = "rust-image-effects"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.76"
base64 = "0.13.0"
image = "0.23.14"

# choose the specific dependency so it won't download it all
[dependencies.web-sys]
version = "0.3.4"
# this feature will export javascript console features
features = ["console"]
